[package]
name = "tp3"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "integrated-timers", "task-arena-size-2048"] }
embassy-time = "0.3"
embassy-stm32 = { version = "0.1", features = ["stm32f407vg", "time-driver-any"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"